...actually fixed TaskHierarchy double scroll issue
Fixes #27 (truly)

--- a/src/components/Content/TaskHierarchy/TaskHierarchy.css
+++ b/src/components/Content/TaskHierarchy/TaskHierarchy.css
@@ -5,7 +5,7 @@
 
 #task-hierarchy-title {
   text-align: center;
-  margin: 8px 0 18px 0;
+  margin: 0 0 18px 0;
 }
 
 #task-hierarchy-title h2 {
